login and signup added

--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}">
 </head>
 <body>
-    <h3>NavBar</h3>
+    <div class="navbar">
+        <h3>NavBar</h3> 
+        <button>login</button>
+    </div>
     <hr>
+
+
+    
 
     <div>
         {% block content %}
