--- a/store/templates/store/login.html
+++ b/store/templates/store/login.html
@@ -6,7 +6,18 @@
     <title>Login</title>
 </head>
 <body>
-    <label for=""></label>
-    <input type="text" name="" id="">
+    <div>
+        <h2>Login</h2>
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username" required><br><br>
+            
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password" required><br><br>
+
+            <input type="submit" value="Login">
+        </form>
+    </div>
 </body>
 </html>
