--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -7,7 +7,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');
         /* Add your CSS styles here */
     </style>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/cart.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/cart1.css' %}">
 </head>
 <body>
 <div class="checkout-page">
