--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -1,29 +1,100 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>On1yOne</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
-
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <link rel="stylesheet" type="text/css" href="{% static 'css/home.css' %}"> -->
-</head>
-<body>
-    <div>
-        <h3>NavBar</h3> 
-        <button onclick="location.href = '/login'">login</button>
-        <button onclick="location.href = '/signup'">signup</button>
-    </div>
-    <hr>
-
-    <div>
-        <h1>On1yOne</h1>
-        <button onclick="location.href = '/store'">try it yourself</button>
-    </div>
-
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
-</body>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="stylesheet" href="{% static 'css/home.css' %}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    </head>
+    <body>
+        <div class="index">
+            <div class="div">
+                <div class="navbar">
+                    <div class="navbar-2">
+                        <img src="logo1.png">
+                        <div class="home"><a href="index.html">HOME</a></div>
+                        <div class="shop"><a href="#">SHOP</a></div>
+                        <div class="about"><a href="#">ABOUT</a></div>
+                        <div class="contact"><a href="#">CONTACT</a></div>
+                        <div class="icons">
+                            <a href="#"><span class="material-symbols-outlined">
+                                account_circle
+                                </span></a>
+                            
+                            <a href="#"><span class="material-symbols-outlined">
+                                shopping_cart_checkout
+                                </span></a>
+            
+                            <a href="#"><span class="material-symbols-outlined">
+                                login
+                                </span></a>
+                        </div> 
+                    </div>
+                </div>
+                <div class="hero">
+                    <div class="overlap">
+                        <div class="overlap-group">
+                            <p class="super-value-deals-on">Super Value deals <br />On all Products</p>
+                            <p class="save-more-with">Save more with coupons &amp; up to 70% off!</p>
+                        </div>
+                        <button class="button-85" role="button">Shop Now</button>
+                    </div>
+                </div>
+                <div class="cards-section">
+                    <div class="group">
+                        <div class="overlap-group-2">
+                            <div class="text-wrapper-2">T-Shirts</div>
+                            <div class="text-wrapper-3">starting at Rs 1,500/-</div>
+                            <button class="button-85" id="shopButton" role="button">Shop Now</button>
+                        </div>
+                    </div>
+                    <div class="overlap-wrapper">
+                        <div class="overlap-group-2">
+                            <button class="button-85" id="shopButton" role="button">Shop Now</button>
+                            <div class="text-wrapper-6">starting at Rs 3,500/-</div>
+                            <div class="text-wrapper-7">Hoodies</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="coming-soon">
+                    <button class="overlap-group-wrapper">Get Notified</button>
+                    <div class="text-wrapper-9">Coming soon</div>
+                    <div class="laptop-sleeves">LAPTOP SLEEVES</div>
+                </div>
+                <div class="footer">
+                    <img class="social" src="facebook.png"/>
+                    <div class="social-2"></div>
+                    <img class="img" src="youtube.png"/>
+                    <div class="social-3"></div>
+                    <div class="menu-footer">
+                        <div class="text-wrapper-10">Product</div>
+                        <div class="text-wrapper-11">Landing Page</div>
+                        <div class="text-wrapper-12">Popup Builder</div>
+                        <div class="text-wrapper-13">Web-design</div>
+                        <div class="text-wrapper-14">Content</div>
+                        <div class="text-wrapper-15">Integrations</div>
+                    </div>
+                    <div class="menu-footer-vert">
+                        <div class="text-wrapper-10">Use Cases</div>
+                        <div class="text-wrapper-11">Web-designers</div>
+                        <div class="text-wrapper-12">Marketers</div>
+                        <div class="text-wrapper-13">Small Business</div>
+                        <div class="text-wrapper-14">Website Builder</div>
+                    </div>
+                    <div class="menu-footer-2">
+                        <div class="text-wrapper-10">Company</div>
+                        <div class="text-wrapper-11">About Us</div>
+                        <div class="text-wrapper-12">Careers</div>
+                        <div class="text-wrapper-13">FAQs</div>
+                        <div class="text-wrapper-14">Teams</div>
+                        <div class="text-wrapper-15">Contact Us</div>
+                    </div>
+                    <div class="overlap-2">
+                        <p class="p">High level experience in web design and development knowledge, producing quality work.</p>
+                        <img class="one-logo" src="logo.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
